add query param to populate chlidren or not
